# ArcamClient

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  meson.build
data/: uk.org.winder.arcamclient.desktop  uk.org.winder.arcamclient.metainfo.xml
doc/: arcamclient.1
src/: about.rs  arcam_protocol.rs  comms_manager.rs  control_window.rs  functionality.rs  lib.rs  main.rs  socket_support.rs
src/resources/: application_menu.xml  arcamclient.glade
tests/: communications_test.rs  system_test.rs  test_mockavr850.rs  ui_test.rs
tests/start_avr850/: mod.rs
