[package]
name = "arcamclient"
version = "0.0.0"
authors = ["Russel Winder <russel@winder.org.uk>"]
categories = ["desktop applications"]
keywords = ["Arcam", "amplifier", "remote", "control"]
license = "GPL-3.0"
description = "arcamclient is a Rust/gtk-rs/GTK+ desktop application to control an Arcam amplifier over the Ethernet connection."
readme = "README.md"
edition = "2018"

[dependencies]
ctor = "*"
env_logger = "*"
futures = "*"
#gdk-pixbuf = "*"
gdk-pixbuf = {git = "https://github.com/gtk-rs/gdk-pixbuf"}
#gio = "*"
gio = {git = "https://github.com/gtk-rs/gio"}
gio-futures = {git="https://github.com/sdroege/gio-futures.git"}
#gio-futures = {path="../../../Forks/Gio_Futures"}
#glib = {version="*", features=["v2_56"]}
glib = {git = "https://github.com/gtk-rs/glib", features=["v2_56"]}
#gtk = {version="*", features=["v3_22"]}
gtk = {git="https://github.com/gtk-rs/gtk", features=["v3_22"]}
lazy_static = "*"
log = "*"
num-traits = "*"
num-derive = "*"
rand = "*"

[dev-dependencies]
#quickcheck = "*"
#proptest = "*"
#rstest = "*"
